--- a/index.html
+++ b/index.html
@@ -1,8 +1,41 @@
 <!DOCTYPE html>
-<html lang="en-US">
-  <head>
-    <title>Homepage</title>
-  </head>
-  <body>
-      <h1>This is test content.</h1>
-  </body>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Assignment portal ">
+    <title>Assignment Portal</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="css/main.css">
+    <script src="js/main.js" defer></script>
+</head>
+<body>
+    <header>
+        <img src="images/dan.jpg" alt="Pic">
+        <h1>Daniel Harris</h1>
+    </header>
+    <main>
+        <h2>WDD 230 Assignment Portal</h2>
+        <ul>
+            <li>Lesson 02: <a href="#">Lesson 2</a></li>
+            <li>Lesson 03: <a href="#">Title</a></li>
+            <li>Lesson 04: <a href="#">Title</a></li>
+            <li>Lesson 05: <a href="#">Title</a></li>
+            <li>Lesson 06: <a href="#">Title</a></li>
+            <li>Lesson 07: <a href="#">Title</a></li>
+            <li>Lesson 08: <a href="#">Title</a></li>
+            <li>Lesson 09: <a href="#">Title</a></li>
+            <li>Lesson 10: <a href="#">Title</a></li>
+            <li>Lesson 11: <a href="#">Title</a></li>
+            <li>Lesson 12: <a href="#">Title</a></li>
+        </ul>
+        <hr>
+    </main>
+</body>
+<footer>
+    <p>&copy;2022 DH</p>
+</footer>
+</html>
