--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 </head>
 <body>
     <header>
-        <img src="images/dan.jpg" alt="Pic">
+        <img src="images/dan.jpg" alt="Pic" class="profile">
         <h1>Daniel Harris</h1>
     </header>
     <main>
