--- a/index.html
+++ b/index.html
@@ -36,7 +36,10 @@
         <hr>
     </main>
 </body>
-<footer>
-    <p>&copy;2022 DH</p>
+<footer> 
+      &copy; <span id="cyear"></span> | Daniel Harris | Oregon |
+      Last updated: <span id="datelm"></span>
+      <script src="/wdd230/js/script.js"></script>
+    </footer>
 </footer>
 </html>
