--- a/index.html
+++ b/index.html
@@ -40,6 +40,6 @@
         </footer>
         <script src="js/lastModifiedDate.js"></script>
         <script src="https://ajax.googleapis.com/ajax/libs/webfont/1.6.26/webfont.js"></script>
-        <script>WebFont.load({google: {families: ["Roboto", "Milonga"]}});</script>
+        <script>WebFont.load({google: {families: ["Roboto"]}});</script>
     </body>
     </html>
