--- a/lesson1/index.html
+++ b/lesson1/index.html
@@ -52,9 +52,8 @@
     <footer>
         <p>&copy;<span id="classYear"></span> &bull; Dan Harris &bull; Oregon &bull; <a href="https://www.byui.edu/online">BYUI Online Learning</a>
         <br><span id="output"></span></p>
+     <p><a href="../">Assignment Portal</a></p>
     </footer>
-    <script src="js/lastModifiedDate.js"></script>
-    <script src="https://ajax.googleapis.com/ajax/libs/webfont/1.6.26/webfont.js"></script>
-    <script>WebFont.load({google: {families: ["Roboto"]}});</script>
+    <script src="js/design.js"></script>
 </body>
 </html>
