--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
         <main>
         <h2>WDD 230: Assignment Portal</h2>
             <ul>
+                <li>Lesson 01: <a href="../index.html">Course Assignment Portal</a></li>
                 <li>Lesson 02: <a href="lesson1/index.html">Design Principles</a></li>
                 <li>Lesson 03: <a href="#">Title</a></li>
                 <li>Lesson 04: <a href="#">Title</a></li>
