--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         <main>
         <h2>WDD 230: Assignment Portal</h2>
             <ul>
-                <li>Lesson 01: <a href="../index.html">Course Assignment Portal</a></li>
+                <li>Lesson 01: <a href="index.html">Course Assignment Portal</a></li>
                 <li>Lesson 01: <a href="lesson2/">Design Principles</a></li>
                 <li>Lesson 03: <a href="#">Title</a></li>
                 <li>Lesson 04: <a href="#">Title</a></li>
