--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
             <ul>
                 <li>Lesson 01: <a href="index.html">Course Assignment Portal</a></li>
                 <li>Lesson 02: <a href="lesson2/">Design Principles</a></li>
-                <li>Lesson 03: <a href="lesson3/">Title</a>Website Planning Assignment</li>
+                <li>Lesson 03: <a href="lesson3/">Website Planning Assignment</a></li>
                 <li>Lesson 04: <a href="#">Title</a></li>
                 <li>Lesson 05: <a href="#">Title</a></li>
                 <li>Lesson 06: <a href="#">Title</a></li>
