further updates to design

--- a/lesson3/index.html
+++ b/lesson3/index.html
@@ -28,21 +28,21 @@
         <hr>
         <section>
             <h3>Site Name</h3>
-            <p><br>Donec viverra volutpat enim sit amet vestibulum.</p>
+            <p><br>SE Idaho Weather</p>
         </section>
         <section>
             <h3>Site Purpose</h3>
-            <p>Donec viverra volutpat enim sit amet vestibulum.</p>
+            <p>The prupose of this website is to provide locals and visitors to the Sw Idaho area with pertinent weather information. </p>
             <p>Donec viverra volutpat enim sit amet vestibulum.</p>
             <p>Donec viverra volutpat enim sit amet vestibulum.</p>
         </section>
         <section>
             <h3>Domain Name</h3>
-            <p>Donec viverra volutpat enim sit amet vestibulum.</p>
+            <p>SeIDWx.net/com is available for purchase. The price is $12.95 for the first year. </p>
         </section>
         <section>
             <h3>Logo</h3>
-            <img src="images/weatherlogo.jpg" alt="Logo for the weather site">
+            <img src="images/sunny.png" alt="Sun">
         </section>
     </main>
     <footer>
