--- a/lesson3/color-scheme.html
+++ b/lesson3/color-scheme.html
@@ -30,9 +30,9 @@
         <table id="colorTable">
             <tr>
                 <td class="backgroundWhite">#ffffff<br>(255, 255, 255)</td>
-                <td class="backgroundYellow">#f2be54<br>(242, 190, 84)</td>
-                <td class="backgroundGrey">#cacfd4<br>(202, 207, 212)</td>
-                <td class="backgroundDarkBlue textWhite">#153e5c<br>(21, 62, 92)</td>
+                <td class="backgroundteal">#0A8BA1<br>(10, 139, 161)</td>
+                <td class="backgroundteal2">#09C1C5<br>(9, 193, 197)</td>
+                <td class="backgroundDarkBlue textWhite">#17405B<br>(23, 64, 91))</td>
                 <td class="backgroundBlack textWhite">#000000<br>(0, 0, 0)</td>
             </tr>
         </table>
