--- a/lesson2/index.html
+++ b/lesson2/index.html
@@ -4,56 +4,53 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="W01 Design Principles Website">
-    <title>WDD 230 &bull; Week 1 &bull; Design Principles</title>
+    <meta name="description" content="This is an assignment home page for the Website Planning Document of week 3 in WDD 230.">
+    <title>WDD 230 &bull; Lesson 2 &bull; Website Planning Document</title>
     <link rel="stylesheet" href="css/normalize.css">
     <link rel="stylesheet" href="css/small.css">
     <link rel="stylesheet" href="css/medium.css">
     <link rel="stylesheet" href="css/large.css">
 </head>
-
 <body>
     <header>
-        <h1>WDD 230 &bull; Week 1</h1>
-    </header>    
+        <h1>WDD 230 &bull; Week 2</h1>
+    </header>  
+    <nav>
+        <ul>
+            <li class="active"><a href="./">Home</a></li>
+            <li><a href="target-audience.html">Target Audience</a></li>
+            <li><a href="color-scheme.html">Color Scheme</a></li>
+            <li><a href="typography.html">Typography</a></li>
+        </ul>
+    </nav>
     <main>
-        <h2>Design Principles</h2>
+        <h2>Website Planning Assignment</h2>
         <hr>
-        <div id="mainColumns">
-            <section>
-                <h3>Visual Hierarchy</h3>
-                <p>Apple INC.<br>
-                <a href="https://www.apple.com/">apple.com</a></p>
-                <picture>
-                    <img src="images/apple.png" alt="mobile screenshot of apple's website">
-                </picture>
-                <p>Apple INC. Website follows the visual hierarchy design principle well, the elements are organized from top to bottom in a linear fashion.</p>
-            </section>
-            <section>
-                <h3>PARC:Proximity</h3>
-                <p>Kickpush<br>
-                <a href="https://www.kickpush.co/">kickpush.co</a></p>
-                <picture>
-                    <img src="images/kickpush.png" alt="mobile screenshot of kickpush.co website">
-                </picture>
-                <p>This website does a good job of keeping related elements together and seperating them into logical chunks.</p>
-            </section>
-            <section>
-                <h3>White Space and Clean Design</h3>
-                <p>The New Yorker<br>
-                <a href="https://www.newyorker.com/">newyorker.com</a></p>
-                <picture>
-                    <img src="images/theny.png" alt="mobile screenshot of theny website">
-                </picture>
-                <p>Whitespace is prevelant throughout the website, the choice of font with lots of space enhances this effect as well.</p>
-            </section>
-        </div>  
+        <section>
+            <h3>Site Name</h3>
+            <p><br>SE Idaho Weather</p>
+        </section>
+        <section>
+            <h3>Site Purpose</h3>
+            <p>The prupose of this website is to provide locals and visitors to the Sw Idaho area with pertinent weather information. </p>
+            <p>It aims to be a one stop place for weather and other information that will assist people in making decisions for outdoor activities and </p>
+        </section>
+        <section>
+            <h3>Domain Name</h3>
+            <p>SeIDWx.net/com is available for purchase. The price is $12.95 for the first year. </p>
+        </section>
+        <section>
+            <h3>Logo</h3>
+            <img src="images/sunny.png" alt="Sun">
+        </section>
+    </main>
+    <footer>
     </main>
     <footer>
         <p>&copy;<span id="classYear"></span> &bull; Dan Harris &bull; PDX, Oregon &bull; <a href="https://www.byui.edu/online">BYUI Online Learning</a>
         <br><span id="output"></span></p>
-     <p><a href="../">Assignment Portal</a></p>
+        <p><a href="../">Assignment Portal</a></p>
     </footer>
-    <script src="js/design.js"></script>
+    <script src="js/planning.js"></script>
 </body>
 </html>
