--- a/lesson2/index.html
+++ b/lesson2/index.html
@@ -33,7 +33,7 @@
         <section>
             <h3>Site Purpose</h3>
             <p>The prupose of this website is to provide locals and visitors to the Sw Idaho area with pertinent weather information. </p>
-            <p>It aims to be a one stop place for weather and other information that will assist people in making decisions for outdoor activities and </p>
+            <p>It aims to be a one stop place for weather and other information that will assist people in making decisions for outdoor activities and local events.  </p>
         </section>
         <section>
             <h3>Domain Name</h3>
