--- a/lesson2/color-scheme.html
+++ b/lesson2/color-scheme.html
@@ -18,9 +18,9 @@
     <nav>
         <ul>
             <li><a href="./">Home</a></li>
-            <li><a href="target-aud.html">Target Audience</a></li>
-            <li class="active"><a href="color.html">Color Scheme</a></li>
-            <li><a href="type.html">Typography</a></li>
+            <li><a href="target-audience.html">Target Audience</a></li>
+            <li class="active"><a href="color-scheme.html">Color Scheme</a></li>
+            <li><a href="typography.html">Typography</a></li>
         </ul>
     </nav>
     <main>
