--- a/lesson2/target-audience.html
+++ b/lesson2/target-audience.html
@@ -28,7 +28,7 @@
         <hr>
         <section>
             <h3>Target Audience Description</h3>
-            <p>The target audience of the summertimetowintertide.com website:</p>
+            <p>The target audience of the SeIDWx.net website:</p>
             <p><b>Who:</b> Vestibulum fermentum, sem non mattis egestas, neque lectus euismod velit, non dictum purus felis nec urna.</p>
             <p><b>Age:</b> 12 to 100</p>
             <p><b>Technology:</b> Vestibulum fermentum, sem non mattis egestas, neque lectus euismod velit, non dictum purus felis nec urna..</p>
