--- a/lesson2/typography.html
+++ b/lesson2/typography.html
@@ -50,7 +50,7 @@
                 <td>20px</td>
                 <td>#000000</td>
                 <td>#f2be54</td>
-                <td class="backgroundYellow textBlack size20">Sample</td>
+                <td class="backgroundteal textBlack size20">Sample</td>
             </tr>
             <tr>
                 <td>Footer Navigation</td>
@@ -58,7 +58,7 @@
                 <td>20px</td>
                 <td>#000000</td>
                 <td>#f2be54</td>
-                <td class="backgroundYellow textBlack size20">Sample</td>
+                <td class="backgroundteal textBlack size20">Sample</td>
             </tr>
             <tr>
                 <td>Heading 1 (h1)</td>
