--- a/lesson2/target-audience.html
+++ b/lesson2/target-audience.html
@@ -29,20 +29,20 @@
         <section>
             <h3>Target Audience Description</h3>
             <p>The target audience of the SeIDWx.net website:</p>
-            <p><b>Who:</b> Vestibulum fermentum, sem non mattis egestas, neque lectus euismod velit, non dictum purus felis nec urna.</p>
+            <p><b>Who:</b>Visitors, Locals and people passing though the area. </p>
             <p><b>Age:</b> 12 to 100</p>
-            <p><b>Technology:</b> Vestibulum fermentum, sem non mattis egestas, neque lectus euismod velit, non dictum purus felis nec urna..</p>
-            <p><b>Income:</b> Vestibulum fermentum, sem non mattis egestas, neque lectus euismod velit, non dictum purus felis nec urna.</p>
-            <p><b>Motivation:</b> Vestibulum fermentum, sem non mattis egestas, neque lectus euismod velit, non dictum purus felis nec urna.</p>
+            <p><b>Technology:</b>Smartphones, desktop, and kiosk type devices will visit this website.</p>
+            <p><b>Income:</b>All income brackets will be targeted as this area can cater to all of them.</p>
+            <p><b>Motivation:</b>Their motivation is to get local info all in one place.</p>
         </section>
         <section>
             <h3>Persona 1</h3>
             <h4>Name</h4>
-            <img src="images/jon.JPG" alt="16 year old boy smiling">
-            <p><b>Occupation:</b>  </p>
-            <p><b>Demographics:</b> Age: Vestibulum fermentum, sem non mattis egestas, neque lectus euismod velit, non dictum purus felis nec urna.</p>
-            <p><b>Goals:</b> Vestibulum fermentum, sem non mattis egestas, neque lectus euismod velit, non dictum purus felis nec urna.</p>
-            <p><b>Environment:</b> Vestibulum fermentum, sem non mattis egestas, neque lectus euismod velit, non dictum purus felis nec urna.</p>
+            <img src="images/jon.jpg" alt="boy">
+            <p><b>Occupation:</b>Student  </p>
+            <p><b>Demographics:Local native</b> Age:18</p>
+            <p><b>Goals:</b> Looking to go to college after graduation and return to take over the family business.</p>
+            <p><b>Environment:</b>Famland, fields and rolling hills. Likes to visit the mountians and snowboard as well.</p>
             <p><b>Quote:</b> "Vestibulum fermentum, sem non mattis egestas, neque lectus euismod velit, non dictum purus felis nec urna."</p>            
         </section>
         <section>
