--- a/lesson2/target-audience.html
+++ b/lesson2/target-audience.html
@@ -47,21 +47,21 @@
         </section>
         <section>
             <h3>Persona 2</h3>
-            <h4>name</h4>
-            <img src="images/jenn.jpg" alt="40 year old woman smiling">
-            <p><b>Occupation:</b> </p>
-            <p><b>Demographics:</b> Age: Vestibulum fermentum, sem non mattis egestas, neque lectus euismod velit, non dictum purus felis nec urna.</p>
-            <p><b>Goals:</b> Vestibulum fermentum, sem non mattis egestas, neque lectus euismod velit, non dictum purus felis nec urna.</p>
-            <p><b>Environment:</b> Vestibulum fermentum, sem non mattis egestas, neque lectus euismod velit, non dictum purus felis nec urna.</p>
+            <h4>Name Jenn</h4>
+            <img src="images/jenn.jpg" alt="60 year old woman smiling">
+            <p><b>Occupation:</b>Bookkeeper </p>
+            <p><b>Demographics:</b> Age: 60</p>
+            <p><b>Goals:</b>Spend time outdoors to enjoy retirement.</p>
+            <p><b>Environment:</b>Suburban environment.</p>
             <p><b>Quote:</b> "Vestibulum fermentum, sem non mattis egestas, neque lectus euismod velit, non dictum purus felis nec urna.""</p>
         </section>
         <section>
             <h3>Scenarios</h3>
-            <p><b>Scenario 1:</b> Vestibulum fermentum, sem non mattis egestas, neque lectus euismod velit, non dictum purus felis nec urna?</p>
-            <p><b>Scenario 2:</b>Vestibulum fermentum, sem non mattis egestas, neque lectus euismod velit, non dictum purus felis nec urna?</p>
-            <p><b>Scenario 3:</b> Vestibulum fermentum, sem non mattis egestas, neque lectus euismod velit, non dictum purus felis nec urna.?</p>
-            <p><b>Scenario 4:</b> Vestibulum fermentum, sem non mattis egestas, neque lectus euismod velit, non dictum purus felis nec urna.</p>
-            <p><b>Scenario 5:</b> Vestibulum fermentum, sem non mattis egestas, neque lectus euismod velit, non dictum purus felis nec urna.</p>
+            <p><b>Scenario 1:</b>Hiker looking for weather in the surrounding area to plan trip.</p>
+            <p><b>Scenario 2:</b>Skiier refrencing the latest run reports.</p>
+            <p><b>Scenario 3:</b>Travellers passing through the area checking road condidtions.</p>
+            <p><b>Scenario 4:</b>Football coach looking for local events his team can assist in.</p>
+            <p><b>Scenario 5:</b>Grandma looking for local activities to keep busy.</p>
         </section>
     </main>
     <footer>
