--- a/weather/preston.html
+++ b/weather/preston.html
@@ -13,9 +13,9 @@
 </head>
 <body>
     <header>
-        <img src="images/sunny.jpg" alt="Logo for the weather site">
+        <img src="images/sunny.png" alt="Logo for the weather site">
         <section class="headings">
-            <h1>Summertime to SW Idaho Weather</h1>
+            <h1>SW Idaho Weather</h1>
             <div class="moto">All weather, all the time.</div>
         </section>
     </header>  
