--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
                 <li>Lesson 01: <a href="lesson1/">Design Principles</a></li>
                 <li>Lesson 02: <a href="lesson2/">Website Planning Assignment</a></li>
                 <li>Lesson 03: <a href="weather/preston.html">Preston Town Page: PT 1</a></li>
-                <li>Lesson 05: <a href="#">Title</a></li>
+                <li>Lesson 03: <a href="weather2/preston.html">Preston Town Page: PT 2</a></li>
                 <li>Lesson 06: <a href="#">Title</a></li>
                 <li>Lesson 07: <a href="#">Title</a></li>
                 <li>Lesson 08: <a href="#">Title</a></li>
