--- a/weather2/preston.html
+++ b/weather2/preston.html
@@ -18,7 +18,7 @@
         <br>9:00 a.m. Saturday at the city park pavilion.</p> 
     </div>
     <header>
-            <img src="images/weatherlogo.jpg" alt="Logo for the weather site">
+            <img src="images/sunny.png" alt="Logo for the weather site">
             <section class="headings">
                 <h1>SW Idaho Weather</h1>
                 <div class="moto">All weather, all the time.</div>
