--- a/weather2/preston.html
+++ b/weather2/preston.html
@@ -103,6 +103,7 @@
         </div>   
         <div id="footerBar">
             <p>&copy;SW Idaho Weather &bull; Attributions &bull; Daniel Harris
+            <p><a href="../">Assignment Portal</a></p>
             <br><span id="output"></span></p>
         </div> 
     </footer>
