--- a/weather2/preston.html
+++ b/weather2/preston.html
@@ -43,7 +43,7 @@
                 <h3>Weather Summary</h3>
                 <label>Currently:</label> <p>Overcast</p>
                 <label>High:</label> <p>22&deg;C</p>
-                <label>Wind Chill:</label><p>&deg;C</p>
+                <label>Wind Chill:</label><p>2&deg;C</p>
                 <label>Humidity:</label> <p>69%</p>
                 <label>Wind Speed:</label> <p>5 kph</p>
             </section>
