--- a/gallery/gallery-7.html
+++ b/gallery/gallery-7.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="This is an assignment page for the Preston site page of week 4 in WDD 230.">
-    <title>WDD 230 &bull; Week 4 &bull; Preston Town Page</title>
+    <title>WDD 230 &bull; Week 4 &bull; Gallery</title>
     <link rel="stylesheet" href="css/normalize.css">
     <link rel="stylesheet" href="css/small.css">
     <link rel="stylesheet" href="css/medium.css">
