--- a/gallery/gallery.html
+++ b/gallery/gallery.html
@@ -26,7 +26,7 @@
             <li><a href="#">Soda Springs</a></li>
             <li><a href="#">Fish Haven</a></li>
             <li><a href="#">Storm Center</a></li>
-            <li><a class="active"><a href="gallery-7.html">Gallery</a></li>
+            <li><a class="active"><a href="gallery.html">Gallery</a></li>
         </ul>
     </nav>
     <main>
