--- a/gallery/gallery-7.html
+++ b/gallery/gallery-7.html
@@ -1,46 +1,101 @@
 
 <!DOCTYPE html>
-<html lang="en">
-    <head>
-        <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Dan Harris WDD 230 Portal</title>
-        <meta name="description" content="WDD 230">
-        <link rel="stylesheet" href="css/normalize.css">
-        <link rel="stylesheet" href="css/small.css">
-        <link rel="stylesheet" href="css/medium.css">
-    </head>
-    <body>
-        <div class = "content">
-        <header>
-        <img src ="images/dan.jpg" width="120" alt="dan photo">
-        <h1>Dan Harris</h1>
-    
-        </header>
-        
-        <main>
-        <h2>WDD 230: Assignment Portal</h2>
-            <ul>
-                <li>Lesson 01: <a href="index.html">Course Assignment Portal</a></li>
-                <li>Lesson 01: <a href="lesson1/">Design Principles</a></li>
-                <li>Lesson 02: <a href="lesson2/">Website Planning Assignment</a></li>
-                <li>Lesson 03: <a href="weather/preston.html">Preston Town Page: PT 1</a></li>
-                <li>Lesson 04: <a href="weather2/preston.html">Preston Town Page: PT 2</a></li>
-                <li>Lesson 05: <a href="gallery/gallery-7.html">Gallery</a></li>
-                <li>Lesson 07: <a href="#">Title</a></li>
-                <li>Lesson 08: <a href="#">Title</a></li>
-                <li>Lesson 09: <a href="#">Title</a></li>
-                <li>Lesson 10: <a href="#">Title</a></li>
-                <li>Lesson 11: <a href="#">Title</a></li>
-                <li>Lesson 12: <a href="#">Title</a></li>
-            </ul>
-        </main>
-        <footer>
-            <p>&copy;<span id="classYear"></span> &bull; Dan Harris &bull; PDX, Oregon &bull; <a href="https://www.byui.edu/online">BYUI Online Learning</a>
-            <br><span id="output"></span></p>
-        </footer>
-        <script src="js/lastModifiedDate.js"></script>
-        <script src="https://ajax.googleapis.com/ajax/libs/webfont/1.6.26/webfont.js"></script>
-        <script>WebFont.load({google: {families: ["Roboto"]}});</script>
-    </body>
-    </html>
+<html lang="en-us">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="This is an assignment page for the Gallery site page.">
+    <title>WDD 230 &bull; Week 4 &bull; Gallery</title>
+    <link rel="stylesheet" href="css/normalize.css">
+    <link rel="stylesheet" href="css/small.css">
+    <link rel="stylesheet" href="css/medium.css">
+    <link rel="stylesheet" href="css/large.css">
+</head>
+<body>
+    <header>
+        <img src="images/sunny.png" alt="Logo for the weather site">
+        <section class="headings">
+            <h1>SE Idaho Weather</h1>
+            <div class="moto">All weather, all the time.</div>
+        </section>
+    </header> r>  
+    <nav>
+        <ul class="navigation">
+            <li><a class="ham" href="#">☰ Menu</a></li>
+            <li><a href="./">Home</a></li>
+            <li><a href="weather2/preston.html">Preston</a></li>
+            <li><a href="#">Soda Springs</a></li>
+            <li><a href="#">Fish Haven</a></li>
+            <li><a href="#">Storm Center</a></li>
+            <li class="active"><a href="gallery-7.html">Gallery</a></li>
+        </ul>
+    </nav>
+    <main>
+        <h2>Weather Gallery</h2>
+        <div id="weatherGallery">
+            <div class="galleryBlock">
+               <picture>
+                    <img src="images/placeholder.jpg" data-src="images/galone.jpg" alt="snow covered trees"> 
+                </picture>
+                <p>Fresh snow in Preston Park</p>             
+            </div>
+            <div class="galleryBlock">
+                <picture>
+                     <img src="images/placeholder.jpg" data-src="images/galtwo.jpg" alt="lightning striking mountain"> 
+                 </picture>
+                 <p>Lightning south of Soda Springs</p>             
+             </div>
+             <div class="galleryBlock">
+                <picture>
+                     <img src="images/placeholder.jpg" data-src="images/galthree.jpg" alt="tornado and lighnight over town"> 
+                 </picture>
+                 <p>Tornado south of Fish Haven</p>             
+             </div>
+             <div class="galleryBlock">
+                <picture>
+                     <img src="images/placeholder.jpg" data-src="images/galnine.jpg" alt="blue sky with white clouds"> 
+                 </picture>
+                 <p>Sunshine in Preston</p>             
+             </div>
+             <div class="galleryBlock">
+                <picture>
+                     <img src="images/placeholder.jpg" data-src="images/galfive.jpg" alt="double raindbow over forest and lake"> 
+                 </picture>
+                 <p>Double rainbow east of Soda Springs</p>             
+             </div>
+             <div class="galleryBlock">
+                <picture>
+                     <img src="images/placeholder.jpg" data-src="images/galfour.jpg" alt="snow covered moutains"> 
+                 </picture>
+                 <p>Snow covered mountains north of Fish Haven</p>             
+             </div>
+             <div class="galleryBlock">
+                <picture>
+                     <img src="images/placeholder.jpg" data-src="images/galseven.jpg" alt="full arcing rainbow over field"> 
+                 </picture>
+                 <p>Full rainbow south of Preston</p>             
+             </div>
+             <div class="galleryBlock">
+                <picture>
+                     <img src="images/placeholder.jpg" data-src="images/galsix.jpg" alt="cloudcover over grassy hills"> 
+                 </picture>
+                 <p>Storm font noth of Soda Springs</p>             
+             </div>
+             <div class="galleryBlock">
+                <picture>
+                     <img src="images/placeholder.jpg" data-src="images/galeight.jpg" alt="sunshine streaming through light cloud coverage"> 
+                 </picture>
+                 <p>Sunshine in Fish Haven</p>             
+             </div>
+        </div>
+    </main>
+    <footer id="footerBar">
+        <p>&copy;SE ID WX &bull; Attributions &bull; Dan Harris
+        <br><span id="output"></span></p>
+    </footer>
+    <script src="js/preston.js"></script>
+    <script src="js/gallery.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/webfont/1.6.26/webfont.js"></script>
+    <script>WebFont.load({google: {families: ["Roboto"]}});</script>
+</body>
+</html>
