--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                 <li>Lesson 03: <a href="weather/preston.html">Preston Town Page: PT 1</a></li>
                 <li>Lesson 04: <a href="weather2/preston.html">Preston Town Page: PT 2</a></li>
                 <li>Lesson 05: <a href="gallery/gallery-7.html">Gallery</a></li>
-                <li>Lesson 07: <a href="#">Title</a></li>
+                <li>Lesson 06: <a href="stormcenter/stormcenter.html">Storm Center</a></li>
                 <li>Lesson 08: <a href="#">Title</a></li>
                 <li>Lesson 09: <a href="#">Title</a></li>
                 <li>Lesson 10: <a href="#">Title</a></li>
