--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
                 <li>Lesson 06: <a href="stormcenter/stormcenter.html">Storm Center</a></li>
                 <li>Lesson 07: <a href="lesson-5/index.html">Week 5</a></li>
                 <li>Lesson 09: <a href="lesson-10/preston.html">Weather Site API</a></li>
-                <li>Lesson 10: <a href="#">Title</a></li>
+                <li>Lesson 10: <a href="lesson-11/index.html">Weather Site Complete</a></li>
                 <li>Lesson 11: <a href="#">Title</a></li>
                 <li>Lesson 12: <a href="#">Title</a></li>
             </ul>
