--- a/lesson-10/preston.html
+++ b/lesson-10/preston.html
@@ -41,11 +41,11 @@
             <img src="images/heropic.jpg" alt="image of preston Idaho">
             <section id="weatherSummary">
                 <h3>Weather Summary</h3>
-                <label>Currently:</label> <p>Overcast</p>
-                <label>High:</label> <p>22&deg;C</p>
-                <label>Wind Chill:</label><p>2&deg;C</p>
-                <label>Humidity:</label> <p>69%</p>
-                <label>Wind Speed:</label> <p>5 kph</p>
+                <label>Currently:</label> <p><span id="desPreston"></span></p>
+                <label>Temperature:</label> <p><span id="temperaturePreston"></span>&deg;F</p>
+                <label>Wind Chill:</label><p><span id="windChill"></span></p>
+                <label>Humidity:</label> <p><span id="humidityPreston"></span>%</p>
+                <label>Wind Speed:</label> <p><span id="windSpeedPreston"></span> mph</p>
             </section>
         </div>
         <div id="forcastArea">
