--- a/lesson-10/preston.html
+++ b/lesson-10/preston.html
@@ -20,19 +20,19 @@
     <header>
             <img src="images/sunny.png" alt="Logo for the weather site">
             <section class="headings">
-                <h1>SW Idaho Weather</h1>
+                <h1>SE Idaho Weather</h1>
                 <div class="moto">All weather, all the time.</div>
             </section>        
     </header>  
     <nav>
         <ul class="navigation">
             <li><a class="ham" href="#">☰ Menu</a></li>
-            <li><a href="./">Home</a></li>
-            <li class="active"><a href="weather2/preston.html">Preston</a></li>
-            <li><a href="#">Soda Springs</a></li>
-            <li><a href="#">Fish Haven</a></li>
-            <li><a href="#">Storm Center</a></li>
-            <li><a href="#">Gallery</a></li>
+            <li class="active"><a href="./">Home</a></li>
+            <li><a href="lesson-10/preston.html">Preston</a></li>
+            <li><a href="sodasprings.html">Soda Springs</a></li>
+            <li><a href="fishhaven.html">Fish Haven</a></li>
+            <li><a href="stormcenter/stormcenter.html">Storm Center</a></li>
+            <li><a href="gallery/gallery-7.html">Gallery</a></li>
         </ul>
     </nav>
     <main>
