--- a/lesson-11/index.html
+++ b/lesson-11/index.html
@@ -24,11 +24,11 @@
         <ul class="navigation">
             <li><a class="ham" href="#">☰ Menu</a></li>
             <li class="active"><a href="./">Home</a></li>
-            <li><a href="lesson-10/preston.html">Preston</a></li>
+            <li><a href="preston.html">Preston</a></li>
             <li><a href="sodasprings.html">Soda Springs</a></li>
             <li><a href="fishhaven.html">Fish Haven</a></li>
-            <li><a href="stormcenter/stormcenter.html">Storm Center</a></li>
-            <li><a href="gallery/gallery-7.html">Gallery</a></li>
+            <li><a href="stormcenter.html">Storm Center</a></li>
+            <li><a href="gallery.html">Gallery</a></li>
         </ul>
     </nav>
     <main>
@@ -60,7 +60,7 @@
             </article>
         </div>
         <div id="articleArea">    
-            <h3>Idaho... Where Adventures Come to Life</h3>
+            <h3>Idaho a Poem</h3>
             <figure class="articleImg">
                 <img src="images/articlephotohome.jpg" alt="picture our shy subject of article!" loading="lazy">
             </figure>
