--- a/lesson-11/sodasprings.html
+++ b/lesson-11/sodasprings.html
@@ -21,7 +21,7 @@
             </section>        
     </header>  
     <nav>
-        ul class="navigation">
+        <ul class="navigation">
         <li><a class="ham" href="#">☰ Menu</a></li>
         <li class="active"><a href="./">Home</a></li>
         <li><a href="lesson-10/preston.html">Preston</a></li>
