--- a/lesson-11/fishhaven.html
+++ b/lesson-11/fishhaven.html
@@ -23,10 +23,10 @@
     <nav>
         <ul class="navigation">
             <li><a class="ham" href="#">☰ Menu</a></li>
-            <li class="active"><a href="./">Home</a></li>
+            <li><a href="./">Home</a></li>
             <li><a href="preston.html">Preston</a></li>
             <li><a href="sodasprings.html">Soda Springs</a></li>
-            <li><a href="fishhaven.html">Fish Haven</a></li>
+            <li class="active"><a href="fishhaven.html">Fish Haven</a></li>
             <li><a href="stormcenter.html">Storm Center</a></li>
             <li><a href="gallery.html">Gallery</a></li>
         </ul>
