--- a/lesson-11/gallery.html
+++ b/lesson-11/gallery.html
@@ -23,11 +23,11 @@
         <ul class="navigation">
             <li><a class="ham" href="#">☰ Menu</a></li>
             <li><a href="./">Home</a></li>
-            <li><a href="weather2/preston.html">Preston</a></li>
-            <li><a href="#">Soda Springs</a></li>
-            <li><a href="#">Fish Haven</a></li>
-            <li><a href="#">Storm Center</a></li>
-            <li class="active"><a href="gallery-7.html">Gallery</a></li>
+            <li><a href="preston.html">Preston</a></li>
+            <li><a href="sodasprings.html">Soda Springs</a></li>
+            <li><a href="fishhaven.html">Fish Haven</a></li>
+            <li><a href="stormcenter.html">Storm Center</a></li>
+            <li class="active"><a href="gallery.html">Gallery</a></li>
         </ul>
     </nav>
     <main>
