--- a/lesson-11/sodasprings.html
+++ b/lesson-11/sodasprings.html
@@ -22,14 +22,14 @@
     </header>  
     <nav>
         <ul class="navigation">
-        <li><a class="ham" href="#">☰ Menu</a></li>
-        <li class="active"><a href="./">Home</a></li>
-        <li><a href="lesson-10/preston.html">Preston</a></li>
-        <li><a href="sodasprings.html">Soda Springs</a></li>
-        <li><a href="fishhaven.html">Fish Haven</a></li>
-        <li><a href="stormcenter/stormcenter.html">Storm Center</a></li>
-        <li><a href="gallery/gallery-7.html">Gallery</a></li>
-    </ul>
+            <li><a class="ham" href="#">☰ Menu</a></li>
+            <li><a href="./">Home</a></li>
+            <li><a href="preston.html">Preston</a></li>
+            <li class="active"><a href="sodasprings.html">Soda Springs</a></li>
+            <li><a href="fishhaven.html">Fish Haven</a></li>
+            <li><a href="stormcenter.html">Storm Center</a></li>
+            <li><a href="gallery.html">Gallery</a></li>
+        </ul>
     </nav>
     <main>
         <h2>Soda Springs Idaho</h2>
