--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         </header>
         
         <main>
-        <h2>WDD 230: Assignment Portal</h2>
+        <h2>WDD 230: Assignment Porta</h2>
             <ul>
                 <li>Lesson 01: <a href="index.html">Course Assignment Portal</a></li>
                 <li>Lesson 01: <a href="lesson1/">Design Principles</a></li>
