--- a/index.html
+++ b/index.html
@@ -22,15 +22,15 @@
         <h2>WDD 230: Assignment Portal</h2>
             <ul>
                 <li>Lesson 01: <a href="index.html">Course Assignment Portal</a></li>
-                <li>Lesson 01: <a href="lesson1/">Design Principles</a></li>
-                <li>Lesson 02: <a href="lesson2/">Website Planning Assignment</a></li>
-                <li>Lesson 03: <a href="weather/preston.html">Preston Town Page: PT 1</a></li>
-                <li>Lesson 04: <a href="weather2/preston.html">Preston Town Page: PT 2</a></li>
-                <li>Lesson 05: <a href="gallery/gallery-7.html">Gallery</a></li>
-                <li>Lesson 06: <a href="stormcenter/stormcenter.html">Storm Center</a></li>
-                <li>Lesson 07: <a href="lesson-5/index.html">Week 5</a></li>
-                <li>Lesson 09: <a href="lesson-10/preston.html">Weather Site API</a></li>
-                <li>Lesson 10: <a href="lesson-11/index.html">Weather Site Complete</a></li>
+                <li>Lesson 01: <a href="#lesson1/">Design Principles</a></li>
+                <li>Lesson 02: <a href="#lesson2/">Website Planning Assignment</a></li>
+                <li>Lesson 03: <a href="#weather/preston.html">Preston Town Page: PT 1</a></li>
+                <li>Lesson 04: <a href="#weather2/preston.html">Preston Town Page: PT 2</a></li>
+                <li>Lesson 05: <a href="#gallery/gallery-7.html">Gallery</a></li>
+                <li>Lesson 06: <a href="#stormcenter/stormcenter.html">Storm Center</a></li>
+                <li>Lesson 07: <a href="#lesson-5/index.html">Week 5</a></li>
+                <li>Lesson 09: <a href="#lesson-10/preston.html">Weather Site API</a></li>
+                <li>Lesson 10: <a href="#lesson-11/index.html">Weather Site Complete</a></li>
                 <li>Lesson 11: <a href="#">Title</a></li>
                 <li>Lesson 12: <a href="#">Title</a></li>
             </ul>
