--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         <h2>WDD 230: Assignment Porta</h2>
             <ul>
                 <li>Lesson 01: <a href="index.html">Course Assignment Portal</a></li>
-                <li>Lesson 01: <a href="#lesson1/">Design Principles</a></li>
+                <!--<li>Lesson 01: <a href="#lesson1/">Design Principles</a></li>
                 <li>Lesson 02: <a href="#lesson2/">Website Planning Assignment</a></li>
                 <li>Lesson 03: <a href="#weather/preston.html">Preston Town Page: PT 1</a></li>
                 <li>Lesson 04: <a href="#weather2/preston.html">Preston Town Page: PT 2</a></li>
@@ -32,7 +32,7 @@
                 <li>Lesson 09: <a href="#lesson-10/preston.html">Weather Site API</a></li>
                 <li>Lesson 10: <a href="#lesson-11/index.html">Weather Site Complete</a></li>
                 <li>Lesson 11: <a href="#">Title</a></li>
-                <li>Lesson 12: <a href="#">Title</a></li>
+                <li>Lesson 12: <a href="#">Title</a></li> -->
             </ul>
         </main>
         <footer>
