--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
             </ul>
         </main>
         <footer>
-            <p>&copy;<span id="classYear"></span> &bull; Dan Harris &bull; PDX, Oregon &bull; <a href="https://www.byui.edu/online">BYUI Online Learning</a>
+            <p>&copy;<span id="classYear"></span> &bull; Dan Harris &bull; PDX, Oregon &bull; <a href="https://codepen.io/blazzard-jason/pen/JNzKpY">Codepen.io</a>
             <br><span id="output"></span></p>
         </footer>
         <script src="js/lastModifiedDate.js"></script>
