--- a/index.html
+++ b/index.html
@@ -27,12 +27,12 @@
                 <li>Lesson 03: <a href="#weather/preston.html">Chamber Homepage</a></li>
                 <li>Lesson 04: <a href="#weather2/preston.html">Chamber Homepage: PT 2</a></li>
                 <li>Lesson 05: <a href="#gallery/gallery-7.html">Gallery</a></li>
-                <li>Lesson 06: <a href="#stormcenter/stormcenter.html">Business Directory</a></li>
+                <!--<li>Lesson 06: <a href="#stormcenter/stormcenter.html">Business Directory</a></li>
                 <li>Lesson 07: <a href="#lesson-5/index.html">Week 5</a></li>
                 <li>Lesson 09: <a href="#lesson-10/preston.html">Weather Site API</a></li>
                 <li>Lesson 10: <a href="#lesson-11/index.html">Weather Site Complete</a></li>
                 <li>Lesson 11: <a href="#">Title</a></li>
-                <li>Lesson 12: <a href="#">Title</a></li> -->
+                <li>Lesson 12: <a href="#">Title</a></li>-->
             </ul>
         </main>
         <footer>
