--- a/lesson2/index.html
+++ b/lesson2/index.html
@@ -47,7 +47,7 @@
     <footer>
     </main>
     <footer>
-        <p>&copy;<span id="classYear"></span> &bull; Dan Harris &bull; PDX, Oregon &bull; <a href="https://www.byui.edu/online">BYUI Online Learning</a>
+        <p>&copy;<span id="classYear"></span> &bull; Dan Harris &bull; PDX, Oregon &bull; <a href="https://www.byui.edu/online">BYU-I Online Learning</a>
         <br><span id="output"></span></p>
         <p><a href="../">Assignment Portal</a></p>
     </footer>
