--- a/lesson2/target-audience.html
+++ b/lesson2/target-audience.html
@@ -28,7 +28,7 @@
         <hr>
         <section>
             <h3>Target Audience Description</h3>
-            <p>The target audience of the SeIDWx.net website:</p>
+            <p>The target audience of the IDCOC.net website:</p>
             <p><b>Who:</b>Visitors, Locals and people passing though the area. </p>
             <p><b>Age:</b> 13 to 100</p>
             <p><b>Technology:</b>Smartphones, desktop, and kiosk type devices will visit this website.</p>
@@ -57,7 +57,7 @@
         </section>
         <section>
             <h3>Scenarios</h3>
-            <p><b>Scenario 1:</b>Hiker looking for weather in the surrounding area to plan trip.</p>
+            <p><b>Scenario 1:</b>Hiker looking for business opprotunites in the surrounding area.</p>
             <p><b>Scenario 2:</b>Skiier refrencing the latest run reports.</p>
             <p><b>Scenario 3:</b>Travellers passing through the area checking road condidtions.</p>
             <p><b>Scenario 4:</b>Football coach looking for local events his team can assist in.</p>
