--- a/lesson2/index.html
+++ b/lesson2/index.html
@@ -28,16 +28,16 @@
         <hr>
         <section>
             <h3>Site Name</h3>
-            <p><br>SE Idaho Weather</p>
+            <p><br>Mountain Chamber</p>
         </section>
         <section>
             <h3>Site Purpose</h3>
-            <p>The prupose of this website is to provide locals and visitors to the Sw Idaho area with pertinent weather information. </p>
-            <p>It aims to be a one stop place for weather and other information that will assist people in making decisions for outdoor activities and local events.  </p>
+            <p>The prupose of this website is to provide locals and visitors to the SW Idaho area with pertinent commecrial information. </p>
+            <p>It aims to be a one stop place for business and other information that will assist people in making decisions for outdoor activities and local events.  </p>
         </section>
         <section>
             <h3>Domain Name</h3>
-            <p>SeIDWx.net/com is available for purchase. The price is $12.95 for the first year. </p>
+            <p>IDCOC.net/com is available for purchase. The price is $12.95 for the first year. </p>
         </section>
         <section>
             <h3>Logo</h3>
