--- a/weather/chamber.html
+++ b/weather/chamber.html
@@ -4,8 +4,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="This is an assignment page for the Preston site page of week 4 in WDD 230.">
-    <title>WDD 230 &bull; Week 2 &bull; Preston Town Page</title>
+    <meta name="description" content="This is an assignment page for the Chamber site page of week 4 in WDD 230.">
+    <title>WDD 230 &bull; Week 4 &bull; Chamber Home Page</title>
     <link rel="stylesheet" href="css/normalize.css">
     <link rel="stylesheet" href="css/small.css">
     <link rel="stylesheet" href="css/medium.css">
@@ -15,23 +15,23 @@
     <header>
         <img src="images/sunny.png" alt="Logo for the weather site">
         <section class="headings">
-            <h1>SW Idaho Weather</h1>
-            <div class="moto">All weather, all the time.</div>
+            <h1>Sunny Chamber of Commerce</h1>
+            <div class="moto">Always Sunny, All the time.</div>
         </section>
     </header>  
     <nav>
         <ul class="navigation">
             <li><a class="ham" href="#">☰ Menu</a></li>
             <li><a href="./">Home</a></li>
-            <li class="active"><a href="preston.html">Preston</a></li>
-            <li><a href="#">Soda Springs</a></li>
-            <li><a href="#">Fish Haven</a></li>
-            <li><a href="#">Storm Center</a></li>
-            <li><a href="#">Gallery</a></li>
+            <li class="active"><a href="chamber.html">Chamber Homepage</a></li>
+            <li><a href="#">Discover</a></li>
+            <li><a href="#">Directory</a></li>
+            <li><a href="#">Join</a></li>
+            <li><a href="#">Contact</a></li>
         </ul>
     </nav>
     <main>
-        <h2>Preston Idaho</h2>
+        <h2>Sunny Chamber of Commerce</h2>
         <div>Hero w/ weather summary</div>
         <div>Five Day Forecast</div>
         <div>Article</div>
