--- a/chamber1/chamber.html
+++ b/chamber1/chamber.html
@@ -38,10 +38,8 @@
         <div>Contact Information</div>
     </main>
     <footer>
-        <p>&copy;<span id="classYear"></span> &bull; Dan Harris &bull; PDX, Oregon &bull; <a href="https://www.byui.edu/online">BYUI Online Learning</a>
-        <br><span id="output"></span></p>
-        <p><a href="../">Assignment Portal</a></p>
+        &copy;<span class="year">2022</span> Daniel Harris | <a target="_blank" href="https://byui.edu/online">BYUI Online Learning</a>
     </footer>
-    <script src="js/preston.js"></script>
+    <script src="js/chamber.js"></script>
 </body>
 </html>
