--- a/chamber1/chamber.html
+++ b/chamber1/chamber.html
@@ -32,7 +32,7 @@
     </nav>
     <main>
         <h2>Sunny Chamber of Commerce</h2>
-        <div>Hero w/ weather summary</div>
+        <div>Hero w/ summary</div>
         <div>Five Day Forecast</div>
         <div>Article</div>
         <div>Contact Information</div>
