--- a/chamber1/chamber.html
+++ b/chamber1/chamber.html
@@ -38,8 +38,11 @@
         <div>Contact Information</div>
     </main>
     <footer>
-        &copy;<span class="year">2022</span> Daniel Harris | <a target="_blank" href="https://byui.edu/online">BYUI Online Learning</a>
+        &copy;<span class="year">2023</span> Daniel Harris | WDD 230 Project |  <a target="_blank" href="https://byui.edu/online">BYUI Online Learning</a>
     </footer>
-    <script src="js/chamber.js"></script>
+        <script src="js/lastModifiedDate.js"></script>
+        <script src="https://ajax.googleapis.com/ajax/libs/webfont/1.6.26/webfont.js"></script>
+        <script>WebFont.load({google: {families: ["Roboto"]}});</script>
+        <script src="js/chamber.js"></script>
 </body>
 </html>
