footer updates part 5000

--- a/chamber1/chamber.html
+++ b/chamber1/chamber.html
@@ -38,7 +38,7 @@
         <div>Contact Information</div>
     </main>
     <footer>
-        &copy;<span class="year">2023</span> Daniel Harris | WDD 230 Project |  <a target="_blank" href="https://byui.edu/online">BYUI Online Learning</a>
+        &copy;<span class="year">2023</span>| Daniel Harris | WDD 230 Project | Last Updated: <br><span id="output"></span></p>
     </footer>
         <script src="js/lastModifiedDate.js"></script>
         <script src="https://ajax.googleapis.com/ajax/libs/webfont/1.6.26/webfont.js"></script>
