--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
                 <li>Lesson 01: <a href="index.html">Course Assignment Portal</a></li>
                 <li>Lesson 01: <a href="lesson1/">Design Principles</a></li>
                 <li>Lesson 02: <a href="lesson2/">Website Planning Assignment</a></li>
-                <li>Lesson 03: <a href="chamber1/chamber.html">Chamber Homepage</a></li>
+                <li>Lesson 03: <a href="chamber2/index.html">Chamber Homepage</a></li>
                 <li>Lesson 04: <a href="#weather2/preston.html">Chamber Homepage: PT 2</a></li>
                 <li>Lesson 05: <a href="#gallery/gallery-7.html">Gallery</a></li>
                 <!--<li>Lesson 06: <a href="#stormcenter/stormcenter.html">Business Directory</a></li>
