--- a/chamber2/index.html
+++ b/chamber2/index.html
@@ -76,7 +76,7 @@
                     </div>
                 <div class="info">  
                         <span>  &nbsp; &nbsp; &copy;<span id="©">
-                        </span>Tri-Cities Regional Chamber of Commerce &nbsp;</span> |  &nbsp; Dan Harris &nbsp; |  &nbsp; WDD 230 Project &nbsp;|  &nbsp; <span id="output"></span>
+                        </span>&nbsp; Tri-Cities Regional Chamber of Commerce &nbsp;</span> |  &nbsp; Dan Harris &nbsp; |  &nbsp; WDD 230 Project &nbsp;|  &nbsp; <span id="output"></span>
                 </div>            
             </footer>
             <script src="js/script.js"></script>
