--- a/chamber3/index.html
+++ b/chamber3/index.html
@@ -52,10 +52,10 @@
                 <button class="call-to-action">Join us!</button>
         </div>
         <div class="event">
-            <b>Brigham Young University Singers in Concert Tour</b><br>
-            <p>Wedensday, May 3, 2023 7PM </p> Kennewick High School, Kennewick, Washington</p>
-            <p>Brigham Young University Singers is an exciting choir with impressive voices and a wide range of styles. Conducted by Dr. Andrew Crane, the group performs pieces from nearly every musical genre as well as many original works written or arranged for the choir.</p>
+            <h3>Brigham Young University Singers in Concert Tour</h3>
+            <p>Wedensday, May 3, 2023 7PM Kennewick High School, Kennewick, Washington</p>
             <b>Free</b>
+           
         </div>
         <div class="weather">
             <h3>Tri-Cities Weather</h3>
@@ -85,7 +85,7 @@
                 Be aware that all pieces of information within are programming concepts, not actual code. 
             </div>
     
-            <div class="spotlight3"><b>The Ocean Cleanup</b>
+            <div class="spotlight3"><b>Ocean Cleanup</b><br>
                 The Ocean Cleanup is cleaning up floating plastics caught swirling in the Great Pacific Garbage Patch, a plastic accumulation zone with over 100,000,000 kilograms of plastic.
             </div>
         </aside>
