--- a/chamber3/index.html
+++ b/chamber3/index.html
@@ -17,6 +17,10 @@
 </head>
 <body>
     <header>
+        <div id="banner" style="display:none;">
+            <p>🤝🏼 Come join us for the chamber meet and greet Wednesday at 7:00 p.m.</p>
+          </div>
+          
 
         <div class="headname">
            <!-- <img class="logo" src="images/logo.png" alt="tricty regional Chamber of Commerce">-->
