--- a/chamber3/index.html
+++ b/chamber3/index.html
@@ -16,12 +16,13 @@
     <title>Tri-Cities Regional Chamber of Commerce</title>
 </head>
 <body>
-    <header>
-        <div id="banner" style="display:none;">
-            <p>🤝🏼 Come join us for the chamber meet and greet Wednesday at 7:00 p.m.</p>
-          </div>
-          
-
+    <div id="top-page-banner">
+        <div class="banner-content">
+            🤝🏼 Come join us for the chamber meet and greet Wednesday at 7:00 p.m.
+            <button class="bannerBtn" type="button">&times;</button>
+        </div>
+    </div>
+    <header>    
         <div class="headname">
            <!-- <img class="logo" src="images/logo.png" alt="tricty regional Chamber of Commerce">-->
            <h1 class="header-title">Tri City Regional Chamber of Commerce</h1> 
