--- a/index.html
+++ b/index.html
@@ -27,8 +27,8 @@
                 <li>Lesson 03: <a href="chamber2/index.html">Chamber Homepage</a></li>
                 <li>Lesson 04: <a href="bom/bom.html">B.O.M Top 25</a></li>
                 <li>Lesson 05: <a href="chamber3/index.html">Chamber Homepage Continued</a></li>
-                <!--<li>Lesson 06: <a href="#stormcenter/stormcenter.html">Business Directory</a></li>
-                <li>Lesson 07: <a href="#lesson-5/index.html">Week 5</a></li>
+                <li>Lesson 06: <a href="chamber4/index.html">Chamber Homepage Responsive</a></li>
+                <!--<li>Lesson 07: <a href="#lesson-5/index.html">Week 5</a></li>
                 <li>Lesson 09: <a href="#lesson-10/preston.html">Weather Site API</a></li>
                 <li>Lesson 10: <a href="#lesson-11/index.html">Weather Site Complete</a></li>
                 <li>Lesson 11: <a href="#">Title</a></li>
