--- a/chamber4/index.html
+++ b/chamber4/index.html
@@ -67,13 +67,17 @@
             <b>Free</b>
             </div>
         <div class="weather">
-            <h3>Tri-Cities Weather</h3>
-            <h3 id="temp">°C</h3>
-            <h4 id="description-temperature">Description</h4>
-            <hr>
-            <p id="speed">Wind Speed</p>
-            <p id="windchill">Wind Chill</p>
-        </div>
+            <div class="weather-div">
+                <picture>
+                   <img src="images/cloud_day_forecast.webp" alt="Weather-icon">
+               </picture>
+               <h3 id="temp"><span id="temperature">9</span>°C</h3>
+               </div>
+               <h4 id="desc-temp">Partly Cloudy</h4>
+               <hr>
+               <p>Wind Speed: <span id="speed">16</span>km/h</p>
+               <p>Wind Chill: <span id="windchill"></span></p>
+           </div>
         <div class="news">
             <span id="news-date"><b>May 18, 2023</b></span>
             <p>A fundraiser has been started after a Pacific Northwest National Laboratory researcher died and his wife was injured in a car crash near Vantage Bridge over the Columbia River. Money raised through GoFundMe will be used for the funeral of Abhinav Srivastava, 32, and the medical expenses of Stuti Srivastava, 28.
