--- a/chamber4/index.html
+++ b/chamber4/index.html
@@ -76,7 +76,7 @@
                <h4 id="desc-temp">Partly Cloudy</h4>
                <hr>
                <p>Wind Speed: <span id="speed">16</span>km/h</p>
-               <p>Wind Chill: <span id="windchill"></span></p>
+               <p>Wind Chill: <span id="windchill">N/A</span></p>
            </div>
         <div class="news">
             <span id="news-date"><b>May 18, 2023</b></span>
