--- a/lesson7a/lazy.html
+++ b/lesson7a/lazy.html
@@ -4,35 +4,43 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <link rel="shortcut icon" href="images/favicon.ico">
-		<meta name="W07a Lazy Loading - Daniel Harris" content="Lazy Loading of Images">
-        <title>W07a Lazy Loading</title>
-        <link rel="stylesheet" href="styles/style.css">
+        <meta name="description" content="A WDD 230 assignment for week 7. 
+                                          lazy loading images.">
+        <title>W07a Lazy Loading Activity</title>
+        <link rel="stylesheet" href="css/style.css">
     </head>
     <body>
-		<h1>Progressive Loading of Images</h1>
+        <h1>Lazy Loading</h1>
         <picture>
-            <img src='lesson7/images/placeholder.png' data-src="images/bridge2.jpg" alt="Bridge" />
+            <img src="https://dummyimage.com/300x400/ddd/000&text=Placeholder"
+                 data-src="https://picsum.photos/300/400"
+                 alt="placeholder">
         </picture>
-
         <picture>
-            <img src='images/placeholder.png' data-src="images/bridge3.jpg" alt="Another Bridge" />
+            <img src="https://dummyimage.com/300x400/ddd/000&text=Placeholder"
+                 data-src="https://picsum.photos/299/399"
+                 alt="placeholder">
         </picture>
-
         <picture>
-            <img src='images/placeholder.png' data-src="images/fields.jpg" alt="Fields" />
+            <img src="https://dummyimage.com/300x400/ddd/000&text=Placeholder"
+                 data-src="https://picsum.photos/301/401"
+                 alt="placeholder">
         </picture>
-
-        <picture><img src='images/placeholder.png' data-src="images/wine.jpg" alt="Winefields" />
-        </picture>
-
         <picture>
-            <img src='images/placeholder.png' data-src="images/bridge4" alt="More Bridges" />
+            <img src="https://dummyimage.com/300x400/ddd/000&text=Placeholder"
+                 data-src="https://picsum.photos/298/398"
+                 alt="placeholder">
         </picture>
-
         <picture>
-            <img src='images/placeholder.png' data-src="images/loc.png" alt="Location" />
+            <img src="https://dummyimage.com/300x400/ddd/000&text=Placeholder"
+                 data-src="https://picsum.photos/302/402"
+                 alt="placeholder">
         </picture>
-        <script src="scripts/script.js"></script>
+        <picture>
+            <img src="https://dummyimage.com/300x400/ddd/000&text=Placeholder"
+                 data-src="https://picsum.photos/297/397"
+                 alt="placeholder">
+        </picture>
+        <script src="js/script.js"></script>
     </body>
 </html>
