--- a/lesson7/discover.html
+++ b/lesson7/discover.html
@@ -6,22 +6,17 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="shortcut icon" href="images/favicon.ico">
-    <link rel="stylesheet" href="./css/normalize.css">
-    <link rel="stylesheet" href="./css/small.css">
-    <link rel="stylesheet" href="./css/medium.css">
-    <link rel="stylesheet" href="./css/large.css">
+    <link rel="stylesheet" href="css/normalize.css">
+    <link rel="stylesheet" href="css/small.css">
+    <link rel="stylesheet" href="css/medium.css">
+    <link rel="stylesheet" href="css/large.css">
 
     <link href="https://fonts.googleapis.com/css2?family=PT+Sans+Narrow&family=Roboto&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <title>Tri-Cities Regional Chamber of Commerce</title>
 </head>
 <body>
-    <div id="top-page-banner">
-        <div class="banner-content">
-            🤝🏼 Come join us for the chamber meet and greet Wednesday at 7:00 p.m.
-            <button class="bannerBtn" type="button">&times;</button>
-        </div>
-    </div>
+   
     <header>    
         <div class="headname">
            <!-- <img class="logo" src="images/logo.png" alt="tricty regional Chamber of Commerce">-->
@@ -38,7 +33,7 @@
         <div class="menu">
             <nav>
                 <ul id="primaryNav">
-                    <li><a href="/chamber4/index.html">Home</a></li>
+                    <li><a href="#/chamber4/index.html">Home</a></li>
                     <li class="active"><a href="/lesson7/discover.html">Discover</a></li>
                     <li><a href="#">Join</a></li>
                     <li><a href="#">Contact</a></li> 
