--- a/lesson7/discover.html
+++ b/lesson7/discover.html
@@ -33,7 +33,7 @@
         <div class="menu">
             <nav>
                 <ul id="primaryNav">
-                    <li><a href="#/chamber4/index.html">Home</a></li>
+                    <li><a href="/chamber4/index.html">Home</a></li>
                     <li class="active"><a href="/lesson7/discover.html">Discover</a></li>
                     <li><a href="#">Join</a></li>
                     <li><a href="#">Contact</a></li> 
