--- a/chamber/join.html
+++ b/chamber/join.html
@@ -33,9 +33,9 @@
         <div class="menu">
             <nav>
                 <ul id="primaryNav">
-                    <li><a href="/wdd230/chamber4/index.html">Home</a></li>
-                    <li class="active"><a href="/wdd230/lesson7/discover.html">Discover</a></li>
-                    <li><a href="#">Join</a></li>
+                    <li><a href="index.html">Home</a></li>
+                    <li><a href="#/discover.html">Discover</a></li>
+                    <li class="active"><a href="#/join.html">Join</a></li>
                     <li><a href="#">Contact</a></li> 
                 </ul>
             </nav>
