--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
                 <li>Lesson 08a: <a href="lesson8a/tablebuild.html">Table Build</a></li>
                 <li>Lesson 08b: <a href="lesson8b/index.html">Form Build</a></li>
                 <li>Lesson 08c: <a href="join/join.html">Join Page</a></li>
-                <li>Lesson 12: <a href="#">Title</a></li>-->
+                <li>Lesson 09: <a href="lesson9/prophets.html">Latter-Day Prophets</a></li>
             </ul>
         </main>
         <footer>
