--- a/chamber/index.html
+++ b/chamber/index.html
@@ -51,7 +51,7 @@
         
               
     </header>
-    <main>
+    <main class="main">
         <div class="hero">
             <picture class="optipic">
                 <source media="(max-width: 600px)" srcset="images/wdd230-org-small.webp">
