Address and temp updates

--- a/bfoods/about.html
+++ b/bfoods/about.html
@@ -76,8 +76,8 @@
 			<div class="contact_items detailcontent">
 				<h2 class="section_title">Bountiful Foods <span>Contact</span></h2>
 				<ul>
-					<li>Address: 1855A DWayne Street, Carlsbad, CA 92008 </li>
-					<li>Phone: 234-654-5746</li>
+					<li>Address: 1800 Sunset Bvld, Carlsbad, CA 92008 </li>
+					<li>Phone: 555-555-5555</li>
 				</ul>
 				<a href="https://goo.gl/maps/Dmteu3SU4i8DeamS9" target="_blank">Go location with map <i class="fas fa-hand-point-right"></i></a>
 			</div>
@@ -108,8 +108,8 @@
 				<h3>BountifulFoods</h3>
 				<p>Contact information:</p>
 				<ul class="address">
-					<li>Address: 1855A DWayne Street, Carlsbad, CA 92008</li>
-					<li>Phone: <a href="tel:234-654-5746">234-654-5746</a></li>
+					<li>Address: 1800 Sunset Bvld, Carlsbad, CA 92008</li>
+					<li>Phone: <a href="tel:555-555-5555">555-555-5555</a></li>
 				</ul>
 			</div>
 			<div class="footer_item">
