--- a/bfoods/index.html
+++ b/bfoods/index.html
@@ -202,8 +202,8 @@
 					<h3>BountifulFoods</h3>
 					<p>Contact information:</p>
 					<ul class="address">
-						<li>Address: 1855A DWayne Street, Carlsbad, CA 92008</li>
-						<li>Phone: <a href="tel:234-654-5746">234-654-5746</a></li>
+						<li>Address: 1800 Sunset Bvld, Carlsbad, CA 92008</li>
+						<li>Phone: <a href="tel:555-555-5555">555-555-5555</a></li>
 					</ul>
 				</div>
 				<div class="footer_item">
