--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@
                 <li>Lesson 08b: <a href="lesson8b/index.html">Form Build</a></li>
                 <li>Lesson 08c: <a href="join/join.html">Join Page</a></li>
                 <li>Lesson 09: <a href="lesson9/prophets.html">Latter-Day Prophets</a></li>
+                <li>Lesson 10: <a href="chamber/index.html">Completed Chamber Site</a></li>
             </ul>
         </main>
         <footer>
